src/test/ui/parser/issues/issue-44406.stderr
error: expected identifier, found keyword `true`
  --> $DIR/issue-44406.rs:8:10
   |
LL |     foo!(true);
   |          ^^^^ expected identifier, found keyword
   |
help: escape `true` to use it as an identifier
   |
LL |     foo!(r#true);
   |          ++

error: invalid `struct` delimiters or `fn` call arguments
  --> $DIR/issue-44406.rs:3:9
   |
LL |         bar(baz: $rest)
   |         ^^^^^^^^^^^^^^^
...
LL |     foo!(true);
   |     ---------- in this macro invocation
   |
   = note: this error originates in the macro `foo` (in Nightly builds, run with -Z macro-backtrace for more info)
help: if `bar` is a struct, use braces as delimiters
   |
LL |         bar {  }
   |             ~
help: if `bar` is a function, use the arguments directly
   |
LL -         bar(baz: $rest)
LL +         bar(: $rest)
   | 

error: aborting due to 2 previous errors

